kubernetes/manifests/backend-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/mustafa010223/sunum-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
