kubernetes/manifests/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: dev
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP  # default ama açıkça belirtilmesi iyi bir pratiktir
